--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -7,6 +7,7 @@
     > svg {
         display: block;
         max-width: 100%;
+        height: auto;
     }
 }
 
